--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Seravo Must-use Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2021-04-01T15:14:32+03:00\n"
-"PO-Revision-Date: 2021-04-01 15:18+0300\n"
+"POT-Creation-Date: 2021-05-06T14:19:28+03:00\n"
+"PO-Revision-Date: 2021-05-06 14:42+0300\n"
 "Last-Translator: Otto Kekäläinen <otto@seravo.com>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -239,11 +239,11 @@ msgstr "Raahaa laatikot tähän"
 msgid "Toggle panel: %s"
 msgstr "Näytä lisää: %s"
 
-#: lib/sitestatus-ajax.php:306
+#: lib/sitestatus-ajax.php:314
 msgid "Error: Invalid url"
 msgstr "Virhe: virheellinen url"
 
-#: lib/sitestatus-ajax.php:328
+#: lib/sitestatus-ajax.php:336
 msgid "Error! HTTP response code: "
 msgstr "Virhe! HTTP-tilakoodi: "
 
@@ -401,6 +401,138 @@ msgstr "Ei PHP-virheitä lokitiedostossa"
 msgid "Command <code>wp-test</code> runs successfully"
 msgstr "Komento <code>wp-test</code> ajettiin onnistuneesti"
 
+#: modules/dashboard-widgets.php:39 modules/toolbox.php:18
+#: modules/toolbox.php:19
+msgid "Site Status"
+msgstr "Sivuston tila"
+
+#: modules/dashboard-widgets.php:55
+msgid "PHP warnings and errors"
+msgstr "PHP-virheet ja varoitukset"
+
+#: modules/dashboard-widgets.php:68
+msgid "Low disk space"
+msgstr "Levytila vähissä"
+
+#: modules/dashboard-widgets.php:136
+msgid "disk space tool"
+msgstr "levynkäyttö työkalusta"
+
+#: modules/dashboard-widgets.php:138
+msgid "cruft remover tool"
+msgstr "roskatiedostojen poistotyökalun"
+
+#. translators: %1$s url to the disk space tool %2$s url to the cruft file remover tool
+#: modules/dashboard-widgets.php:144
+msgid ""
+"Disk space is running low. You can see more details about the usage on %1$s. "
+"You can also check %2$s for excessive files and folders."
+msgstr ""
+"Levytila on vähissä. Voit katsoa tarkemmat tiedot %1$s. Voit myös tarkistaa "
+"%2$s mahdollisten ylimääräisten tiedostojen tai kansioiden varalta."
+
+#: modules/dashboard-widgets.php:149 modules/sitestatus.php:322
+msgid "Disk space in your plan: "
+msgstr "Levytilaa palvelupaketissasi: "
+
+#: modules/dashboard-widgets.php:150 modules/sitestatus.php:325
+msgid "Space in use: "
+msgstr "Tilaa käytössä: "
+
+#: modules/dashboard-widgets.php:160
+msgid "Site Error Count"
+msgstr "Sivuston virhemäärä"
+
+#. translators: %1$s number of errors in the log %2$s url for additional information
+#: modules/dashboard-widgets.php:166
+msgid ""
+"The PHP error log has more than %1$s entries this week. Please see %2$s for "
+"details. This is usually a sign that something is broken in the code. The "
+"developer of the site should be notified."
+msgstr ""
+"PHP:n virhelokissa on yli %1$s merkintää tällä viikolla. Ole hyvä ja "
+"tarkista yksityiskohdat täältä: %2$s. Tämä on tavallisesti merkki siitä, "
+"että jokin on rikki sivuston koodissa. Suosittelemme, että tästä ilmoitetaan "
+"sivuston kehittäjälle."
+
+#: modules/dashboard-widgets.php:174
+msgid "Old PHP Version"
+msgstr "Vanhentunut PHP-versio"
+
+#: modules/dashboard-widgets.php:177
+msgid "change php version tool"
+msgstr "vaihda PHP-versiota -työkalulla"
+
+#. translators: %1$s current php version %2$s link for changing PHP version
+#: modules/dashboard-widgets.php:184
+msgid ""
+"You are using end of life PHP version %1$s which will no longer be "
+"supported. You can see more details about changing PHP version and \n"
+"          checking PHP upgrade combatability on %2$s."
+msgstr ""
+"Käytössäsi on PHP versio %1$s, jonka tuki ja päivitykset ovat päättyneet. "
+"Voit katsoa lisätietoa PHP-version vaihtamisesta ja version "
+"yhteensopivuudesta sivustollasi %2$s."
+
+#: modules/dashboard-widgets.php:201 modules/sitestatus.php:218
+#: modules/sitestatus.php:361
+msgid "This feature is available only on live production sites."
+msgstr "Tämä toiminto on saatavilla vain oikeilla tuotantosivustoilla."
+
+#: modules/dashboard-widgets.php:205
+msgid "Plan details"
+msgstr "Palvelupaketin tiedot"
+
+#. translators: %1$s url for additional information
+#: modules/dashboard-widgets.php:212
+msgid "Error on fetching plan details. See more from %1$s."
+msgstr ""
+"Virhe ladattaessa palvelupaketin tietoja. Katso lisätietoa tiedostosta %1$s."
+
+#: modules/dashboard-widgets.php:218
+msgid "Plan type: "
+msgstr "Palvelupaketti: "
+
+#: modules/dashboard-widgets.php:219
+msgid "HTTP requests / month: "
+msgstr "HTTP-pyynnöt / kk: "
+
+#: modules/dashboard-widgets.php:224
+msgid "Monthly HTTP requests"
+msgstr "HTTP-liikennetilastot"
+
+#. translators: %1$s contact email link
+#: modules/dashboard-widgets.php:232
+msgid ""
+"These monthly reports are generated from the HTTP access logs of your site. "
+"If you have more HTTP requests than your plan allows, contact %1$s to "
+"upgrade your <a href=\"https://seravo.com/plans\" target=\"_blank\">plan</a>."
+msgstr ""
+"Nämä kuukausittaiset tilastot on tehty sivuston HTTP-liikennelokeista. Jos "
+"HTTP-pyyntöjä on enemmän kuin palvelupakettiin kuuluu, ota yhteyttä %1$s "
+"päivittääksesi <a href=\"https://wp-palvelu.fi/hinnasto\" target=\"_blank"
+"\">palvelupakettisi</a>."
+
+#: modules/dashboard-widgets.php:245 modules/sitestatus.php:228
+msgid "Month"
+msgstr "Kuukausi"
+
+#: modules/dashboard-widgets.php:246 modules/sitestatus.php:229
+msgid "HTTP Requests"
+msgstr "HTTP-pyynnöt"
+
+#: modules/dashboard-widgets.php:247 modules/sitestatus.php:230
+msgid "Report"
+msgstr "Raportti"
+
+#: modules/dashboard-widgets.php:305 modules/sitestatus.php:183
+msgid "View report"
+msgstr "Näytä raportti"
+
+#: modules/dashboard-widgets.php:310
+msgid "The site has no HTTP requests statistics yet."
+msgstr "Sivustolla ei ole vielä HTTP-liikennetilastoja."
+
 #: modules/database.php:47
 msgid "Database Access"
 msgstr "Yhteys tietokantaan"
@@ -554,7 +686,7 @@ msgid "Most common autoloaded wp_option values:"
 msgstr "Useimmiten automaattisesti ladatut wp_option arvot:"
 
 #: modules/database.php:291 modules/sitestatus.php:297
-#: modules/sitestatus.php:741 modules/upkeep.php:347 modules/upkeep.php:676
+#: modules/sitestatus.php:741 modules/upkeep.php:347 modules/upkeep.php:675
 msgid "Toggle Details"
 msgstr "Näytä lisää"
 
@@ -685,111 +817,34 @@ msgid "Shadows explained at Seravo.com/docs"
 msgstr "Varjot selitettynä ohjeissa Seravo.com/docs"
 
 #. translators: $s Identifier for the shadow instance in use
-#: modules/instance-switcher.php:222
-msgid "Your current shadow instance is %s."
+#: modules/instance-switcher.php:223
+#, fuzzy
+#| msgid "Your current shadow instance is %s."
+msgid "Your current shadow instance is \"%s\"."
 msgstr "Olet nyt varjossa %s."
 
-#: modules/instance-switcher.php:223
+#. translators: $s Identifier for the shadow instance in use
+#: modules/instance-switcher.php:224
 msgid "Exit"
 msgstr "Poistu"
 
-#: modules/login-notification.php:59 modules/toolbox.php:18
-#: modules/toolbox.php:19
-msgid "Site Status"
-msgstr "Sivuston tila"
-
-#: modules/login-notification.php:102
+#: modules/login-notification.php:81
 msgid "Large error log"
 msgstr "Suuri virhe loki"
 
-#: modules/login-notification.php:113
+#: modules/login-notification.php:92
 msgid "Error log read failure"
 msgstr "Virhelokin lukuhäiriö"
 
 #. translators: %1$s username of the current user %2$s date of last login %3$s time of last login %4$s reverse domain of the last login
 #. translators: %1$s username of the current user %2$s date of last login %3$s time of last login %4$s IP address of the last login
-#: modules/login-notification.php:209 modules/login-notification.php:223
+#: modules/login-notification.php:188 modules/login-notification.php:202
 msgid "Welcome, %1$s! Your previous login was on %2$s at %3$s from %4$s."
 msgstr ""
 "Tervetuloa, %1$s! Edellinen kirjautumisesi oli %2$s kello %3$s osoitteesta "
 "%4$s."
 
-#. translators: %1$s number of errors in the log %2$s url for additional information
-#: modules/login-notification.php:243
-msgid ""
-"The PHP error log has more than %1$s entries this week. Please see %2$s for "
-"details. This is usually a sign that something is broken in the code. The "
-"developer of the site should be notified."
-msgstr ""
-"PHP:n virhelokissa on yli %1$s merkintää tällä viikolla. Ole hyvä ja "
-"tarkista yksityiskohdat täältä: %2$s. Tämä on tavallisesti merkki siitä, "
-"että jokin on rikki sivuston koodissa. Suosittelemme, että tästä ilmoitetaan "
-"sivuston kehittäjälle."
-
-#: modules/login-notification.php:252 modules/sitestatus.php:218
-#: modules/sitestatus.php:361
-msgid "This feature is available only on live production sites."
-msgstr "Tämä toiminto on saatavilla vain oikeilla tuotantosivustoilla."
-
-#: modules/login-notification.php:256
-msgid "Plan details"
-msgstr "Palvelupaketin tiedot"
-
-#. translators: %1$s url for additional information
-#: modules/login-notification.php:264
-msgid "Error on fetching plan details. See more from %1$s."
-msgstr ""
-"Virhe ladattaessa palvelupaketin tietoja. Katso lisätietoa tiedostosta %1$s."
-
-#: modules/login-notification.php:270
-msgid "Plan type: "
-msgstr "Palvelupaketti: "
-
-#: modules/login-notification.php:271
-msgid "HTTP requests / month: "
-msgstr "HTTP-pyynnöt / kk: "
-
-#: modules/login-notification.php:276
-msgid "Monthly HTTP requests"
-msgstr "HTTP-liikennetilastot"
-
-#. translators: %1$s contact email link
-#: modules/login-notification.php:284
-msgid ""
-"These monthly reports are generated from the HTTP access logs of your site. "
-"If you have more HTTP requests than your plan allows, contact %1$s to "
-"upgrade your <a href=\"https://seravo.com/plans\" target=\"_blank\">plan</a>."
-msgstr ""
-"Nämä kuukausittaiset tilastot on tehty sivuston HTTP-liikennelokeista. Jos "
-"HTTP-pyyntöjä on enemmän kuin palvelupakettiin kuuluu, ota yhteyttä %1$s "
-"päivittääksesi <a href=\"https://wp-palvelu.fi/hinnasto\" target=\"_blank"
-"\">palvelupakettisi</a>."
-
-#: modules/login-notification.php:297 modules/sitestatus.php:228
-msgid "Month"
-msgstr "Kuukausi"
-
-#: modules/login-notification.php:298 modules/sitestatus.php:229
-msgid "HTTP Requests"
-msgstr "HTTP-pyynnöt"
-
-#: modules/login-notification.php:299 modules/sitestatus.php:230
-msgid "Report"
-msgstr "Raportti"
-
-#: modules/login-notification.php:356 modules/sitestatus.php:183
-msgid "View report"
-msgstr "Näytä raportti"
-
-#: modules/login-notification.php:361
-msgid "The site has no HTTP requests statistics yet."
-msgstr "Sivustolla ei ole vielä HTTP-liikennetilastoja."
-
-#: modules/login-notification.php:366
-msgid "PHP error status"
-msgstr "PHP-virheet"
-
-#: modules/login-notification.php:377
+#: modules/login-notification.php:219
 msgid ""
 "The PHP error log is abnormally large. This is a sign that something is "
 "broken in the code. The developer of the site should be notified."
@@ -798,7 +853,7 @@ msgstr ""
 "sivuston koodissa. Suosittelemme, että tästä ilmoitetaan sivuston "
 "kehittäjälle."
 
-#: modules/login-notification.php:388
+#: modules/login-notification.php:230
 msgid ""
 "There is a problem trying to read the php-error.log. This is a sign that "
 "something is broken in the code. The developer of the site should be "
@@ -898,6 +953,7 @@ msgstr ""
 "tarjota salamannopea sivunlataus. Välimuistitettuja sivuja päivitetään %s "
 "välein. Voit käyttää tätä näppäintä, jos haluat tyhjentää välimuistin heti."
 
+#. translators: %s cache refresh interval
 #: modules/purge-cache.php:39
 msgid "Purge Cache"
 msgstr "Tyhjennä välimuisti"
@@ -1521,14 +1577,6 @@ msgstr "Suorita testit"
 #: modules/sitestatus.php:291
 msgid "Click \"Run cache tests\" to run the cache tests"
 msgstr "Klikkaa “Suorita testit” -nappia suorittaaksesi testit"
-
-#: modules/sitestatus.php:322
-msgid "Disk space in your plan: "
-msgstr "Levytilaa palvelupaketissasi: "
-
-#: modules/sitestatus.php:325
-msgid "Space in use: "
-msgstr "Tilaa käytössä: "
 
 #: modules/sitestatus.php:329
 msgid "Disk space low! "
@@ -2187,7 +2235,7 @@ msgstr ""
 msgid "Check PHP compatibility"
 msgstr "Tarkista PHP yhteensopivuus"
 
-#: modules/upkeep.php:377
+#: modules/upkeep.php:376
 msgid ""
 "See also <a target=\"_blank\" href=\"https://help.seravo.com/article/41-set-"
 "your-site-to-use-newest-php-version\">more information on PHP version "
@@ -2196,7 +2244,7 @@ msgstr ""
 "Katso myös <a target=\"_blank\" href=\"https://help.seravo.fi/article/234-"
 "uusimpaan-php-versioon-siirtyminen\">ohje PHP-versiopäivityksistä</a>."
 
-#: modules/upkeep.php:427
+#: modules/upkeep.php:426
 msgid ""
 "I'm aware of the risks associated with edits to the PHP configuration files "
 "and want to proceed with the change."
@@ -2204,16 +2252,16 @@ msgstr ""
 "Olen tietoinen PHP konfiguraatiotiedostoihin tehtävien muutoksien riskeistä "
 "ja haluan tehdä muutoksen."
 
-#: modules/upkeep.php:431
+#: modules/upkeep.php:430
 msgid "Change version"
 msgstr "Vaihda versiota"
 
-#: modules/upkeep.php:436
+#: modules/upkeep.php:435
 msgid "Activating... Please wait up to 30 seconds"
 msgstr "Aktivoidaan... Odota jopa 30 sekuntia"
 
 #. translators: link to log file
-#: modules/upkeep.php:443
+#: modules/upkeep.php:442
 msgid ""
 "PHP version has been changed succesfully! Please check <a href=\"%s\">php-"
 "error.log</a> for regressions."
@@ -2221,11 +2269,11 @@ msgstr ""
 "PHP-versio on onnistuneesti vaihdettu. Tarkkaile lokia <a href=\"%s\">php-"
 "error.log</a> mahdollisten yhteensopivuusongelmien varalta."
 
-#: modules/upkeep.php:448
+#: modules/upkeep.php:447
 msgid "PHP version change failed."
 msgstr "PHP-versiovaihdos epäonnistui."
 
-#: modules/upkeep.php:455
+#: modules/upkeep.php:454
 msgid ""
 "Seravo automatically updates your site and the Seravo Plugin as well. If you "
 "want to immediately update to the latest Seravo Plugin version, you can do "
@@ -2236,41 +2284,41 @@ msgstr ""
 "tehdä sen täältä."
 
 #. translators: current Seravo plugin version
-#: modules/upkeep.php:460
+#: modules/upkeep.php:459
 msgid "Current version: %s"
 msgstr "Nykyinen versio: %s"
 
 #. translators: upstream Seravo plugin version
-#: modules/upkeep.php:469
+#: modules/upkeep.php:468
 msgid "Upstream version: %s"
 msgstr "Viimeisin versio: %s"
 
-#: modules/upkeep.php:474
+#: modules/upkeep.php:473
 msgid ""
 "The currently installed version is the same as the latest available version."
 msgstr "Seravo Plugin on ajantasalla."
 
-#: modules/upkeep.php:475
+#: modules/upkeep.php:474
 msgid "There is a new version available"
 msgstr "Uusi versio saatavilla"
 
-#: modules/upkeep.php:476
+#: modules/upkeep.php:475
 msgid "Seravo Plugin updated"
 msgstr "Seravo-plugin päivitetty"
 
-#: modules/upkeep.php:479
+#: modules/upkeep.php:478
 msgid "Updating... Please wait up to 5 seconds"
 msgstr "Päivitetään... Odota 5 sekunttia"
 
-#: modules/upkeep.php:481
+#: modules/upkeep.php:480
 msgid "Update plugin now"
 msgstr "Päivitä lisäosa"
 
-#: modules/upkeep.php:495
+#: modules/upkeep.php:494
 msgid "The Difference"
 msgstr "Eroavaisuudet"
 
-#: modules/upkeep.php:558
+#: modules/upkeep.php:557
 msgid ""
 "No screenshots found. They will become available during the next attempted "
 "update."
@@ -2278,15 +2326,15 @@ msgstr ""
 "Kuvakaappauksia ei löytynyt. Ne luodaan sivuston seuraavan päivityksen "
 "yhteydessä."
 
-#: modules/upkeep.php:572
+#: modules/upkeep.php:571
 msgid "Current State"
 msgstr "Sivuston nykytila"
 
-#: modules/upkeep.php:573
+#: modules/upkeep.php:572
 msgid "Update Attempt"
 msgstr "Edellinen päivitysyritys"
 
-#: modules/upkeep.php:664
+#: modules/upkeep.php:663
 msgid ""
 "Here you can test the core functionality of your WordPress installation. "
 "Same results can be achieved via command line by running <code>wp-test</"
@@ -2299,13 +2347,13 @@ msgstr ""
 "lisätietoja <a href=\"https://seravo.com/docs/tests/ng-integration-tests/\" "
 "target=\"_BLANK\">Seravon kehittäjäohjeista</a>."
 
-#: modules/upkeep.php:667
+#: modules/upkeep.php:666
 msgid "Run Tests"
 msgstr "Suorita testit"
 
-#: modules/upkeep.php:670
+#: modules/upkeep.php:669
 msgid "Click \"Run Tests\" to run the Codeception tests"
 msgstr "Klikkaa “Suorita testit” -nappia suorittaaksesi Codeception-testit"
 
-#~ msgid "Site Error Count"
-#~ msgstr "Sivuston virhemäärä"
+#~ msgid "PHP error status"
+#~ msgstr "PHP-virheet"
